# homeHydro-S001-ESP-Software

./: .gitmodules  CMakeLists.txt  EC_meter_calibration_calc.ipynb  README.md  sdkconfig  sdkconfig.old
.prompts/: EC_meter_calibration_task.md  EC_meter_sat_saline_calculator.md  copilot-instructions.md
data/: ec_sat_drops_example.csv  raw_data_ec_calibration.csv
ec_calibration/: ec_saturated_drop_calibration_20250928_105717  ec_saturated_drop_calibration_20250928_132116  ec_saturated_drop_calibration_20250928_133217  ec_saturated_drop_calibration_20250928_133828  ec_saturated_drop_calibration_20250928_133843  ec_saturated_drop_calibration_20250928_133938  ec_saturated_drop_calibration_20250928_134037  ec_saturated_drop_calibration_20250928_134353  ec_saturated_drop_calibration_20250928_134526  ec_saturated_drop_calibration_20250928_135102
main/: CMakeLists.txt  main.cpp  pinout.h
main/drivers/: EC_driver.cpp  EC_driver.h  I2C_Slave.cpp  I2C_Slave.h  I2C_Slave_basic_registers.cpp  I2C_Slave_basic_registers.h  INA219.cpp  INA219.h  STUSB4500.cpp  STUSB4500.h  STUSB4500_driver.cpp  STUSB4500_driver.h  pump_driver.cpp  pump_driver.h  status_led_driver.cpp  status_led_driver.h  stusb4500.c
main/tasks/: data_task.cpp  data_task.h  ec_calibration_task.cpp  ec_calibration_task.h  flood_task.cpp  flood_task.h  startup_task.cpp  startup_task.h
notebooks/: EC_meter_sat_saline_calibration.ipynb
