idf_component_register(SRCS "main.cpp"
                        "drivers/INA219.cpp"
                        "drivers/STUSB4500_driver.cpp"
                        "drivers/I2C_Slave.cpp"
                        "drivers/stusb4500.c"
                        "drivers/stusb4500_nvm.c"
                    INCLUDE_DIRS "")
