idf_component_register(SRCS "main.cpp"
                        "drivers/INA219.cpp"
                        "drivers/STUSB4500_driver.cpp"
                        "drivers/I2C_Slave.cpp"
                        "drivers/stusb4500.c"
                        "drivers/stusb4500_nvm.c"
                        "drivers/I2C_Slave_basic_registers.cpp"
                        "drivers/pump_driver.cpp"
                        "drivers/status_led_driver.cpp"
                        "drivers/EC_driver.cpp"
                        "tasks/startup_task.cpp"
                        "tasks/flood_task.cpp"
                    INCLUDE_DIRS "")
